--- a/index.html
+++ b/index.html
@@ -17,9 +17,44 @@
   </div>
   <div class="form">
     <div class="text">
-
+      <h1>This is the best form of all time. Do it, and your life will change. Do it, and everything in your LIFE will change. It is the end all be all of all forms.</h1>
+      <h1>Do it now.</h1>
     </div>
-
+    <form id="form">
+      <legend>Lessss gooooo</legend>
+      <div class="line">
+        <div class="firstName">
+          <label for="first_name">First name</label>
+          <input id="first_name" type="text" name="first_name" />
+        </div>
+        <div class="lastName">
+          <label for="last_name">Last name</label>
+          <input id="last_name" type="text" name="last_name" />
+        </div>
+      </div>
+      <div class="line">
+        <div class="email">
+          <label for="email">Email</label>
+          <input id="email" type="email" name="email" required/>
+        </div>
+        <div class="phoneNumber">
+          <label for="phone_number">Phone number</label>
+          <input id="phone_number" type="tel" name="phone_number" required />
+        </div>
+      </div>
+      <div class="line">
+        <div class="password">
+          <label for="password">Password</label>
+          <input id="password" type="password" name="password" required />
+        </div>
+        <div class="confirmPassword">
+          <label for="confirm_password">Confirm password</label>
+          <input id="password_confirm" type="password" required />
+        </div>
+      </div>
+    </form>
+    <button type="submit" form="form">Submit</button>
+    <h4>Already have a life changing account? <a href="">Log in</a></h4>
   </div>
 </body>
 </html>
