form side styling done

--- a/index.html
+++ b/index.html
@@ -17,43 +17,43 @@
   </div>
   <div class="form">
     <div class="text">
-      <h1>This is the best form of all time. Do it, and your life will change. Do it, and everything in your LIFE will change. It is the end all be all of all forms.</h1>
-      <h1>Do it now.</h1>
+      <h2>This is the best form of all time. Do it, and your life will change. Do it, and <i>everything</i> in your life will change. It is the end all be all of all forms.</h2>
+      <h2><i>Do it now.</i></h2>
     </div>
     <form id="form">
-      <legend>Lessss gooooo</legend>
+      <h2>Lessss gooooo</h2>
       <div class="line">
-        <div class="firstName">
+        <div class="input">
           <label for="first_name">First name</label>
           <input id="first_name" type="text" name="first_name" />
         </div>
-        <div class="lastName">
+        <div class="input">
           <label for="last_name">Last name</label>
           <input id="last_name" type="text" name="last_name" />
         </div>
       </div>
       <div class="line">
-        <div class="email">
+        <div class="input">
           <label for="email">Email</label>
           <input id="email" type="email" name="email" required/>
         </div>
-        <div class="phoneNumber">
+        <div class="input">
           <label for="phone_number">Phone number</label>
           <input id="phone_number" type="tel" name="phone_number" required />
         </div>
       </div>
       <div class="line">
-        <div class="password">
+        <div class="input">
           <label for="password">Password</label>
-          <input id="password" type="password" name="password" required />
+          <input id="password" class="error" type="password" name="password" required />
         </div>
-        <div class="confirmPassword">
+        <div class="input">
           <label for="confirm_password">Confirm password</label>
-          <input id="password_confirm" type="password" required />
+          <input id="password_confirm" class="error" type="password" required />
         </div>
       </div>
     </form>
-    <button type="submit" form="form">Submit</button>
+    <button type="submit" form="form">Create Account</button>
     <h4>Already have a life changing account? <a href="">Log in</a></h4>
   </div>
 </body>
