--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
+  <script src="./script.js" defer></script>
   <title>Best Form</title>
 </head>
 <body>
@@ -46,10 +47,11 @@
         <div class="input">
           <label for="password">Password</label>
           <input id="password" class="error" type="password" name="password" required />
+          <p id="errorMessage">*Passwords do not match</p>
         </div>
         <div class="input">
           <label for="confirm_password">Confirm password</label>
-          <input id="password_confirm" class="error" type="password" required />
+          <input id="confirm_password" class="error" type="password" required />
         </div>
       </div>
     </form>
